<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:theme="@android:style/Theme.NoTitleBar"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@color/colorPrimary"
                android:text="@string/student_details"
                android:textAlignment="center"
                android:layout_marginBottom="40dp"
                android:textColor="#FFFFFF"
                android:textSize="40sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:layout_marginBottom="10dp"
                android:text="Update the student below"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_marginRight="5dp"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    tools:ignore="RtlHardcoded">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:paddingBottom="8dp"
                        android:textColor="#000000"
                        android:text="@string/id" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textColor="#000000"
                        android:text="@string/name" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:layout_marginBottom="10dp"
                        android:paddingBottom="5dp"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"
                        android:textColor="#000000"
                        android:text="@string/surname" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:paddingBottom="8dp"
                        android:textColor="#000000"
                        android:text="@string/maths_marks" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:paddingTop="7dp"
                        android:textColor="#000000"
                        android:text="@string/student_number" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="5"
                        android:focusable="?android:attr/windowFullscreen"
                        android:hint="@string/edtId"
                        android:textSize="12sp"
                        android:clickable="false"
                        android:textStyle="italic"
                        android:maxLines="1" />

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/edtName"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/surname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/edtSurname"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/marks"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/edtMarks"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/studentNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/edtStudent_number"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textStyle="bold" />

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
