<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.codetride.sqlitedatabase.Editor2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:theme="@android:style/Theme.NoTitleBar"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="2dp"
                android:background="@color/colorPrimary"
                android:text="@string/student_details"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/add_student_below"
                android:textAlignment="center"
                android:textColor="@color/colorAccent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:orientation="vertical"
                    tools:ignore="RtlHardcoded">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="@string/name"
                        android:textColor="#000000"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:paddingBottom="5dp"
                        android:text="@string/surname"
                        android:textColor="#000000"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:paddingBottom="8dp"
                        android:text="@string/maths_marks"
                        android:textColor="#000000"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:paddingTop="7dp"
                        android:text="@string/student_number"
                        android:textColor="#000000"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <EditText
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/edtName"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/surname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/edtSurname"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/marks"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/edtMarks"
                        android:inputType="number"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/studentNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/edtStudent_number"
                        android:inputType="number"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textStyle="bold" />




                </LinearLayout>


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="201dp">

                <TextClock
                    android:id="@+id/textClock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:format24Hour="hh:mm:ss a"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
